--- a/journal.Rmd
+++ b/journal.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Journal (reproducible report)"
-author: "Joschka Schwarz"
-date: "2020-11-05"
+author: "Ravi Hitesh Patel"
+date: "2020-12-09"
 output:
   html_document:
     toc: true
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 
 This is an `.Rmd` file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
 
-# My first post
+# Assignment 1
 
 Last compiled: `r Sys.Date()`
 
